--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <img src="./Images/dee89z1-7a5dbaa1-8115-451c-80c2-88c78304f415.png" />
       <div class="charHolder">
-        <h3>Hello There! Welcome</h3>
+        <h3>Coming Soon! Welcome</h3>
 
         <h1>Anime Minia</h1>
         <button type="button">
