--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <h1>Anime Minia</h1>
         <button type="button">
-          <a href="https://kayoanime.com/" target="_blank">Coming Soon..</a>
+          <a href="https://kayoanime.com/" target="_blank">Let's Go</a>
         </button>
       </div>
     </div>
